[gd_scene load_steps=7 format=3 uid="uid://nja8uqjjme55"]

[ext_resource type="Script" uid="uid://brenpngg2gwj8" path="res://scripts/level_select.gd" id="1_p0wlc"]
[ext_resource type="FontFile" uid="uid://djtbv2fuoadpy" path="res://assets/Milk Cake.otf" id="3_2epne"]
[ext_resource type="Texture2D" uid="uid://bgg8tju0vcflo" path="res://assets/level_bg.png" id="4_rif6e"]
[ext_resource type="Texture2D" uid="uid://3vjhmyqiuavm" path="res://assets/star1_small.png" id="5_4nqmc"]
[ext_resource type="Texture2D" uid="uid://qud8i4j56wa8" path="res://assets/star2_small.png" id="6_7plkq"]
[ext_resource type="Texture2D" uid="uid://i1p7kcw6cr6w" path="res://assets/star3_small.png" id="7_ckc44"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p0wlc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 55.0
offset_top = 25.0
offset_right = 1111.0
offset_bottom = 650.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.227451, 0.0745098, 0, 1)
theme_override_fonts/font = ExtResource("3_2epne")
theme_override_font_sizes/font_size = 90
text = "LEVELS"

[node name="LevelsContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 4

[node name="Level1Button" type="TextureButton" parent="VBoxContainer/LevelsContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
texture_normal = ExtResource("4_rif6e")

[node name="Label" type="Label" parent="VBoxContainer/LevelsContainer/Level1Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.228034, 0.074269, 0, 1)
theme_override_fonts/font = ExtResource("3_2epne")
theme_override_font_sizes/font_size = 30
text = "Level 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/LevelsContainer/Level1Button"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("5_4nqmc")

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/LevelsContainer/Level1Button"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("6_7plkq")

[node name="TextureRect3" type="TextureRect" parent="VBoxContainer/LevelsContainer/Level1Button"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("7_ckc44")

[node name="Level2Button" type="TextureButton" parent="VBoxContainer/LevelsContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
texture_normal = ExtResource("4_rif6e")

[node name="Label" type="Label" parent="VBoxContainer/LevelsContainer/Level2Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.227451, 0.0745098, 0, 1)
theme_override_fonts/font = ExtResource("3_2epne")
theme_override_font_sizes/font_size = 30
text = "Level 2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect4" type="TextureRect" parent="VBoxContainer/LevelsContainer/Level2Button"]
visible = false
layout_mode = 0
offset_right = 150.0
offset_bottom = 150.0
texture = ExtResource("5_4nqmc")

[node name="TextureRect5" type="TextureRect" parent="VBoxContainer/LevelsContainer/Level2Button"]
visible = false
layout_mode = 0
offset_right = 150.0
offset_bottom = 150.0
texture = ExtResource("6_7plkq")

[node name="TextureRect6" type="TextureRect" parent="VBoxContainer/LevelsContainer/Level2Button"]
visible = false
layout_mode = 0
offset_right = 150.0
offset_bottom = 150.0
texture = ExtResource("7_ckc44")

[node name="ReturnButton" type="TextureButton" parent="VBoxContainer/LevelsContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
texture_normal = ExtResource("4_rif6e")

[node name="Label" type="Label" parent="VBoxContainer/LevelsContainer/ReturnButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.227451, 0.0745098, 0, 1)
theme_override_fonts/font = ExtResource("3_2epne")
theme_override_font_sizes/font_size = 30
text = "Return"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect7" type="TextureRect" parent="VBoxContainer/LevelsContainer/ReturnButton"]
visible = false
layout_mode = 0
offset_right = 150.0
offset_bottom = 150.0
texture = ExtResource("5_4nqmc")

[node name="TextureRect8" type="TextureRect" parent="VBoxContainer/LevelsContainer/ReturnButton"]
visible = false
layout_mode = 0
offset_right = 150.0
offset_bottom = 150.0
texture = ExtResource("6_7plkq")

[node name="TextureRect9" type="TextureRect" parent="VBoxContainer/LevelsContainer/ReturnButton"]
visible = false
layout_mode = 0
offset_right = 150.0
offset_bottom = 150.0
texture = ExtResource("7_ckc44")

[connection signal="pressed" from="VBoxContainer/LevelsContainer/Level1Button" to="." method="_on_level_1_button_pressed"]
[connection signal="pressed" from="VBoxContainer/LevelsContainer/Level2Button" to="." method="_on_level_2_button_pressed"]
[connection signal="pressed" from="VBoxContainer/LevelsContainer/ReturnButton" to="." method="_on_return_button_pressed"]
